--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 script:
 - npm run test
+- npm run test2
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
