--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jslint": "0.10.1",
     "karma": "0.13.22",
     "karma-firefox-launcher": "1.0.0",
+    "karma-chrome-launcher": "1.0.1",
     "karma-jasmine": "1.0.2",
     "uglify-js2": "2.1.11"
   }
